<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.apphomemanager.PumpProtectSetupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout5PPTS"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline45PPTS"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivBackPPTS"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="5dp"
                    android:onClick="buttonClickedPPTS"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back" />

                <ImageView
                    android:id="@+id/ivSendPPTS"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="5dp"
                    android:onClick="buttonClickedPPTS"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/save" />

                <TextView
                    android:id="@+id/tvTitlePPTS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/titlePPTS"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ivSendPPTS"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:targetApi="lollipop" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout5PPTS">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout2PPTS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/guideline4PPTS"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.6" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/constraintLayout4"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/tvTitleFlowWaterPPTS"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="30dp"
                                android:fontFamily="@font/abeezee"
                                android:text="@string/msgTituloConfiguracaoSensorPPT"
                                android:textColor="@android:color/holo_blue_dark"
                                android:textSize="20dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tvMsgRearmPPTS"
                                tools:targetApi="lollipop" />

                            <TextView
                                android:id="@+id/tvMsgFlowWaterPPTS"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="8dp"
                                android:fontFamily="@font/abeezee"
                                android:text="@string/msgPercentualPulsosPPT"
                                android:textColor="?android:attr/colorButtonNormal"
                                android:textSize="22dp"
                                app:layout_constraintBaseline_toBaselineOf="@+id/etBoxFlowPercentPPTS"
                                app:layout_constraintEnd_toStartOf="@+id/guideline11PPTS"
                                app:layout_constraintStart_toStartOf="parent"
                                tools:targetApi="lollipop" />

                            <EditText
                                android:id="@+id/etBoxFlowPercentPPTS"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="10dp"
                                android:ems="10"
                                android:inputType="number"
                                android:numeric="integer"
                                android:textAlignment="center"
                                app:layout_constraintStart_toStartOf="@+id/guideline11PPTS"
                                app:layout_constraintTop_toBottomOf="@+id/etBoxFlowMaxPPTS" />

                            <TextView
                                android:id="@+id/tvMsgFlowPercentPPTS"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="8dp"
                                android:fontFamily="@font/abeezee"
                                android:text="@string/msgMaximoPulsosPPT"
                                android:textColor="?android:attr/colorButtonNormal"
                                android:textSize="22dp"
                                app:layout_constraintBaseline_toBaselineOf="@+id/etBoxFlowMaxPPTS"
                                app:layout_constraintEnd_toStartOf="@id/guideline11PPTS"
                                app:layout_constraintStart_toStartOf="parent"
                                tools:targetApi="lollipop" />

                            <EditText
                                android:id="@+id/etBoxFlowMaxPPTS"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="10dp"
                                android:ems="10"
                                android:inputType="number"
                                android:numeric="integer"
                                android:textAlignment="center"
                                app:layout_constraintStart_toStartOf="@+id/guideline11PPTS"
                                app:layout_constraintTop_toBottomOf="@+id/tvTitleFlowWaterPPTS" />

                            <EditText
                                android:id="@+id/etBoxDelayPPTS"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="10dp"
                                android:ems="10"
                                android:inputType="number"
                                android:numeric="integer"
                                android:textAlignment="center"
                                app:layout_constraintStart_toStartOf="@+id/guideline11PPTS"
                                app:layout_constraintTop_toBottomOf="@+id/tvTitleDelayPPTS" />

                            <EditText
                                android:id="@+id/etBoxRearmPPTS"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="10dp"
                                android:ems="10"
                                android:inputType="number"
                                android:numeric="integer"
                                android:textAlignment="center"
                                app:layout_constraintStart_toStartOf="@+id/guideline11PPTS"
                                app:layout_constraintTop_toBottomOf="@+id/tvTitleRearmPPTS" />

                            <TextView
                                android:id="@+id/tvMsgRearmPPTS"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="8dp"
                                android:fontFamily="@font/abeezee"
                                android:text="@string/msgTempoMinPPTS"
                                android:textColor="?android:attr/colorButtonNormal"
                                android:textSize="22dp"
                                app:layout_constraintBaseline_toBaselineOf="@+id/etBoxRearmPPTS"
                                app:layout_constraintEnd_toStartOf="@+id/guideline11PPTS"
                                app:layout_constraintStart_toStartOf="parent"
                                tools:targetApi="lollipop" />

                            <TextView
                                android:id="@+id/tvTitleDelayPPTS"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/abeezee"
                                android:text="@string/delayAguaPPTS"
                                android:textColor="@android:color/holo_blue_dark"
                                android:textSize="20dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:targetApi="lollipop" />

                            <TextView
                                android:id="@+id/tvTitleRearmPPTS"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="30dp"
                                android:fontFamily="@font/abeezee"
                                android:text="@string/delayRearmPPTS"
                                android:textColor="@android:color/holo_blue_dark"
                                android:textSize="20dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tvMsgDelayPPTS"
                                tools:targetApi="lollipop" />

                            <TextView
                                android:id="@+id/tvMsgDelayPPTS"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="8dp"
                                android:fontFamily="@font/abeezee"
                                android:text="@string/msgTempoSegPPTS"
                                android:textColor="?android:attr/colorButtonNormal"
                                android:textSize="22dp"
                                app:layout_constraintBaseline_toBaselineOf="@+id/etBoxDelayPPTS"
                                app:layout_constraintEnd_toStartOf="@+id/guideline11PPTS"
                                app:layout_constraintStart_toStartOf="parent"
                                tools:targetApi="lollipop" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline11PPTS"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintGuide_percent="0.65" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </ScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline45PPTS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="52dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
